# Forensics-Lab-Project

./: AGENTS.md  detect_and_extract_raids.py  gen.sh  gen_test_data.sh  pyproject.toml
test_data/hardware_raid5/: disk_A.E01  disk_B.E01  disk_C.E01
test_data/md_raid5_3disk/: disk_A.E01
test_data/md_raid5_4disk_64k/: disk_A.E01  disk_B.E01  disk_C.E01  disk_D.E01
test_data/md_raid5_degraded/: disk_A.E01  disk_B.E01
test_data/mixed/: raid_disk_B.E01  raid_disk_C.E01  solo_disk.E01
test_data/standalone_fat32/: disk.E01
